cierra/tests/snapshots/parser__a.snap
---
source: tests/parser.rs
expression: ast
---
Taurus {
    defs: [
        Pred(
            PredDef {
                name: "sorted",
                vars: [
                    (
                        Array(
                            Int,
                        ),
                        "a",
                    ),
                ],
                body: Quantifier {
                    kind: Forall,
                    vars: [
                        Binder {
                            ty: Int,
                            name: "i",
                        },
                    ],
                    pred: Imply(
                        Cmp(
                            Cmp(
                                Lt,
                                Cmp(
                                    Le,
                                    ArithTerm(
                                        Const(
                                            Int(
                                                0,
                                            ),
                                        ),
                                    ),
                                    Ident(
                                        "i",
                                    ),
                                ),
                                Binary(
                                    Minus,
                                    Ident(
                                        "a",
                                    ),
                                    Const(
                                        Int(
                                            1,
                                        ),
                                    ),
                                ),
                            ),
                        ),
                        Cmp(
                            Cmp(
                                Le,
                                ArithTerm(
                                    ArrAccess {
                                        array: Ident(
                                            "a",
                                        ),
                                        idx: Ident(
                                            "i",
                                        ),
                                    },
                                ),
                                ArrAccess {
                                    array: Ident(
                                        "a",
                                    ),
                                    idx: Binary(
                                        Plus,
                                        Ident(
                                            "i",
                                        ),
                                        Const(
                                            Int(
                                                1,
                                            ),
                                        ),
                                    ),
                                },
                            ),
                        ),
                    ),
                },
            },
        ),
        Func(
            FuncDef {
                name: "search",
                contract: Contract {
                    requires: [
                        Call {
                            callee: "sorted",
                            params: [
                                Arith(
                                    Ident(
                                        "a",
                                    ),
                                ),
                            ],
                        },
                    ],
                    ensures: [],
                },
                ret_ty: Atom(
                    Int,
                ),
                vars: [
                    (
                        Array(
                            Int,
                        ),
                        "a",
                    ),
                    (
                        Atom(
                            Int,
                        ),
                        "x",
                    ),
                ],
                decl_stmts: [
                    Stmt(
                        Ret(
                            Some(
                                Const(
                                    Int(
                                        0,
                                    ),
                                ),
                            ),
                        ),
                    ),
                ],
            },
        ),
    ],
}
